--- a/paper/local.bib
+++ b/paper/local.bib
@@ -42,6 +42,21 @@
 @string{ fsttcs = "Proc. FSTTCS"}
 
 
+@Book{rab93,
+author = {Lawrence Rabiner and Biing-Hwang Juang},
+title = {Fundamentals of speech recognition},
+publisher = {Prentice-Hall},
+year = {1993}
+}
+
+@Book{,
+author = {Philipp Koehn},
+title = {Statistical Machine Translation},
+publisher = {Cambridge University Press},
+year = {1993},
+address = {New York, NY, USA}
+}
+
 @article{rno-talg11,
   author    = {L. Russo and G. Navarro and A. Oliveira},
   title     = {Fully-Compressed Suffix Trees},
