--- a/paper/supplementary.tex
+++ b/paper/supplementary.tex
@@ -196,4 +196,22 @@ $\intervalsymbols{a}{l}{r}$ & finds the set of symbols preceeding pattern $\alph
 \caption{Summary of \CSA and \CST functions used and their time complexity of inference. The above assumes that $n$ or (equivalently) $[l, r]$ matches $\alpha$ in the \CSA $a$ and/or \CST $t$.}
 \end{table*}
 
+\begin{table}
+\centering{
+\begin{tabular}{ll|cc|c}
+Language&&Size (MB)&Tokens (M)& Sentences (K)\\
+\toprule
+Bulgarian&BG&36.11&8.53&329\\
+Czech&CS&53.48&12.25&535\\
+German&DE&171.80&44.07&1785 \\
+English&EN&179.15&49.32&1815\\
+Finnish&FI&145.32&32.85&1737\\
+French&FR&197.68&53.82&1792\\
+Hungarian&HU&52.53&12.02&527\\
+Italian&IT&186.67&48.08&1703\\
+Portuguese&PT&187.20&49.03&1737\\
+\end{tabular}}
+\caption{Tokens and sentence counts refer to the training partition. }\label{fig:data}
+\end{table}
+
 \end{document}
