comments to self

--- a/paper/macros.tex
+++ b/paper/macros.tex
@@ -43,13 +43,13 @@
 \newcommand{\patdot}{\alpha \Bigcdot}
 \newcommand{\dotpatdot}{\Bigcdot \alpha \Bigcdot}
 \newcommand{\nlplus}[1]{N^{1+}(#1)} % note it's an little L not a 1
-\newcommand{\nlplusname}{\textsc{N1p}}
+\newcommand{\nlplusname}{\textsc{N1p}\xspace}
 \newcommand{\nlplusfunc}[3]{\nlplusname(#1, #2, #3)} % "
-\newcommand{\nlplusbacklname}{\textsc{N1pBack1}}
+\newcommand{\nlplusbacklname}{\textsc{N1pBack1}\xspace}
 \newcommand{\nlplusbacklfunc}[3]{\nlplusbacklname(#1, #2, #3)} % " ^ 2
-\newcommand{\nlplusfrontbackname}{\textsc{N1pFrontBack}}
+\newcommand{\nlplusfrontbackname}{\textsc{N1pFrontBack}\xspace}
 \newcommand{\nlplusfrontbackfunc}[4]{\nlplusfrontbackname(#1, #2, #3, #4)} % " 
-\newcommand{\nlplusfrontbacklname}{\textsc{N1pFrontBack1}}
+\newcommand{\nlplusfrontbacklname}{\textsc{N1pFrontBack1}\xspace}
 \newcommand{\nlplusfrontbacklfunc}[3]{\nlplusfrontbacklname(#1, #2, #3)} % "
 
 \newcommand{\tf}{t_{\text{F}}}
