--- a/paper/local.bib
+++ b/paper/local.bib
@@ -41,19 +41,85 @@
 @string{ swat = "Proc. SWAT"}
 @string{ fsttcs = "Proc. FSTTCS"}
 
+@inproceedings{Germann:2009:TPT:1621947.1621952,
+ author = {Germann, Ulrich and Joanis, Eric and Larkin, Samuel},
+ title = {Tightly Packed Tries: How to Fit Large Models into Memory, and Make Them Load Fast, Too},
+ booktitle = {Proceedings of the Workshop on Software Engineering, Testing, and Quality Assurance for Natural Language Processing},
+ series = {SETQA-NLP '09},
+ year = {2009},
+ isbn = {978-1-932432-32-9},
+ location = {Boulder, Colorado},
+ pages = {31--39},
+ numpages = {9},
+ url = {http://dl.acm.org/citation.cfm?id=1621947.1621952},
+ acmid = {1621952},
+ publisher = {Association for Computational Linguistics},
+ address = {Stroudsburg, PA, USA},
+} 
 
-@Book{rab93,
+
+@inproceedings{Chazelle:2004:BFE:982792.982797,
+ author = {Chazelle, Bernard and Kilian, Joe and Rubinfeld, Ronitt and Tal, Ayellet},
+ title = {The Bloomier Filter: An Efficient Data Structure for Static Support Lookup Tables},
+ booktitle = {Proceedings of the Fifteenth Annual ACM-SIAM Symposium on Discrete Algorithms},
+ series = {SODA '04},
+ year = {2004},
+ isbn = {0-89871-558-X},
+ location = {New Orleans, Louisiana},
+ pages = {30--39},
+ numpages = {10},
+ url = {http://dl.acm.org/citation.cfm?id=982792.982797},
+ acmid = {982797},
+ publisher = {Society for Industrial and Applied Mathematics},
+ address = {Philadelphia, PA, USA},
+} 
+
+@article{Bengio:2003:NPL,
+ author = {Bengio, Yoshua and Ducharme, R{\'e}jean and Vincent, Pascal and Janvin, Christian},
+ title = {A neural probabilistic language model},
+ journal = {J. Mach. Learn. Res.},
+ issue_date = {3/1/2003},
+ volume = {3},
+ month = mar,
+ year = {2003},
+ issn = {1532-4435},
+ pages = {1137--1155},
+ numpages = {19},
+ url = {http://dl.acm.org/citation.cfm?id=944919.944966},
+ acmid = {944966},
+ publisher = {JMLR.org},
+} 
+
+@inproceedings{DBLP:conf/interspeech/MikolovKBCK10,
+  author    = {Tomas Mikolov and
+               Martin Karafi{\'{a}}t and
+               Luk{\'{a}}s Burget and
+               Jan Cernock{\'{y}} and
+               Sanjeev Khudanpur},
+  title     = {Recurrent neural network based language model},
+  booktitle = {{INTERSPEECH} 2010, 11th Annual Conference of the International Speech
+               Communication Association, Makuhari, Chiba, Japan, September 26-30,
+               2010},
+  pages     = {1045--1048},
+  year      = {2010},
+  crossref  = {DBLP:conf/interspeech/2010},
+  url       = {http://www.isca-speech.org/archive/interspeech_2010/i10_1045.html},
+  timestamp = {Thu, 09 Apr 2015 14:27:21 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/interspeech/MikolovKBCK10},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+@book{rab93book,
 author = {Lawrence Rabiner and Biing-Hwang Juang},
 title = {Fundamentals of speech recognition},
 publisher = {Prentice-Hall},
 year = {1993}
 }
 
-@Book{,
+@book{koehn2010book,
 author = {Philipp Koehn},
 title = {Statistical Machine Translation},
 publisher = {Cambridge University Press},
-year = {1993},
+year = {2010},
 address = {New York, NY, USA}
 }
 
