--- a/paper/cstlm.tex
+++ b/paper/cstlm.tex
@@ -31,7 +31,8 @@
 \input{sec-intro.tex}
 
 
-\clearpage
+%\clearpage
+
 %\section{Suffix-based Indexing}
 \section{Background}
 \label{sec-suffix}
@@ -56,22 +57,21 @@
 
 
 
-\section{Related Work}
-
-\cite{brants2007large}
-\cite{guthrie2010storing}
-\cite{brants2006web}
-\cite{stolcke2011srilm}
-\cite{stolcke2002srilm}
-\cite{pauls2011faster}
-\cite{heafield2011kenlm}
-\cite{kennington2012suffix}
-\cite{wood2011sequence}
-\cite{chen1996empirical}
-\cite{kneser1995improved}
-\cite{chen1996empirical}
-\cite{navarro2007compressed}
-\cite{gog2014theory}
+%\section{Related Work}
+%\cite{brants2007large}
+%\cite{guthrie2010storing}
+%\cite{brants2006web}
+%\cite{stolcke2011srilm}
+%\cite{stolcke2002srilm}
+%\cite{pauls2011faster}
+%\cite{heafield2011kenlm}
+%\cite{kennington2012suffix}
+%\cite{wood2011sequence}
+%\cite{chen1996empirical}
+%\cite{kneser1995improved}
+%\cite{chen1996empirical}
+%\cite{navarro2007compressed}
+%\cite{gog2014theory}
 
 \section{Conclusions}
 
