--- a/paper/local.bib
+++ b/paper/local.bib
@@ -41,6 +41,32 @@
 @string{ swat = "Proc. SWAT"}
 @string{ fsttcs = "Proc. FSTTCS"}
 
+@inproceedings{DBLP:conf/acl/WatanabeTI09,
+  author    = {Taro Watanabe and
+               Hajime Tsukada and
+               Hideki Isozaki},
+  title     = {A Succinct N-gram Language Model},
+  booktitle = {{ACL} 2009, Proceedings of the 47th Annual Meeting of the Association
+               for Computational Linguistics and the 4th International Joint Conference
+               on Natural Language Processing of the AFNLP, 2-7 August 2009, Singapore,
+               Short Papers},
+  pages     = {341--344},
+  year      = {2009},
+  crossref  = {DBLP:conf/acl/2009s},
+  url       = {http://www.aclweb.org/anthology/P09-2086},
+  timestamp = {Mon, 25 Mar 2013 23:10:00 +0100},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/acl/WatanabeTI09},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@inproceedings{sall11,
+title = {Unary Data Structures for Language Models},
+author  = {Jeffrey Sorensen and Cyril Allauzen},
+year  = 2011,
+booktitle = {Interspeech 2011},
+pages = {1425-1428}
+}
+
 @inproceedings{Germann:2009:TPT:1621947.1621952,
  author = {Germann, Ulrich and Joanis, Eric and Larkin, Samuel},
  title = {Tightly Packed Tries: How to Fit Large Models into Memory, and Make Them Load Fast, Too},
