--- a/paper/sec-abstract.tex
+++ b/paper/sec-abstract.tex
@@ -10,4 +10,4 @@ At the core, the stored index makes use of compressed suffix structures includin
 %
 Our comprehensive experiments show that the memory footprint of our high-order KN-LMs, which are infeasible to build using 
 state-of-the-art LM toolkits due to memory constraints, is the same as that for low-order LMs while maintaining 
-a reasonable query time. 
+a reasonable query-time. 
