added wikipedia figure

--- a/paper/sec-experiments.tex
+++ b/paper/sec-experiments.tex
@@ -50,6 +50,11 @@ Figure~\ref{fig:spacetime} ($\log-\log$) compares our timing and memory usage wi
 \label{fig:spacetime}
 \end{figure}
 
+\begin{figure}[tb]
+\input{figures/fig-wiki-breakdown}
+\caption{Runtime breakdown of a single pattern averaged over $10000$ patterns for both methods over the character-based wikipedia collection.}
+\label{fig:wikitime}
+\end{figure}
 
 
 
