--- a/paper/sec-abstract.tex
+++ b/paper/sec-abstract.tex
@@ -3,7 +3,8 @@ While most previous work has focussed on efficient means of indexing \ngrams usi
 in this paper we develop techniques that allow modelling of extremely large corpora without imposing a Markov condition.
 Our technique leverages succinct indexes in the form of compressed suffix trees which provide near optimal compression while still allowing efficient search.
 We present algorithms for on-the-fly computation of probabilities under an infinite order Kneser-Ney language model.
-Our technique is \emph{exact} and although slower than leading LM toolkits, such as \SRILM, shows promising scaling properties, which we demonstrate through $\infty$ order modelling over the full Wikipedia collection. 
+Our technique is \emph{exact} and although slower than leading LM toolkits, such as \SRILM, shows promising 
+scaling properties, which we demonstrate through $\infty$-order modelling over the full Wikipedia collection. 
 
 %In this paper, we build  fast and compact high-order \ngram language models (LMs) using modern succinct data structures.
 %
