--- a/paper/macros.tex
+++ b/paper/macros.tex
@@ -3,6 +3,8 @@
 \newcommand{\ehsan}[1]{{\color{Cerulean}{\bf{Ehsan says:}} \emph{#1}}}
 \newcommand{\reza}[1]{{\color{Blue}{\bf{Reza says:}} \emph{#1}}}
 
+\newcommand*\uu{{\mathbf{u}}}
+
 \newcommand{\supp}{\emph{Supplementary Materials}\xspace}
 
 \newcommand*\SRILM{\textsc{SriLm}\xspace}
